# Lars-2.0

./: .gitattributes  .gitignore  CMakeLists.txt  LARS.filtergraph  LICENSE  README.md  slothPlugin.filtergraph
models/: mdx23c.pt  mdx23c_capstone.pt  mdx23c_inst_sep.pt
plugin/: CMakeLists.txt
plugin/include/SlothPlugin/: BufferAudioSource.h  Parameters.h  PluginEditor.h  PluginProcessor.h  RoundedCornersEffect.h  TransportComponent.h  TransportOriginal.h  TransportSeparation.h  WaveThumbnail.h
plugin/source/: BufferAudioSource.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp  RoundedCornersEffect.cpp  TransportComponent.cpp  TransportOriginal.cpp  TransportSeparation.cpp  WaveThumbnail.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
